<resources>
    <string name="app_name">ISP Self Service</string>
    <string name="institute_of_the_south_pacific">Institute of the South Pacific</string>
    <string name="select_program_and_year">Select Program And Year</string>
    <string name="offered_courses">Offered Courses</string>
    <string name="schedule">Schedule</string>
    <string name="calendar">Calendar</string>
    <string name="news_feed">News Feed</string>
    <string name="public_transit">Public Transit</string>
    <string name="contact_us">Contact Us</string>
    <string name="currently_viewing_as">Currently Viewing As:</string>
    <string name="select_program">Select Program</string>
    <string name="select_year">Select Year:</string>
    <string name="home">Home</string>
    <string name="courses_offered">Courses Offered</string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="visit_us_on_google_maps">Visit us on Google Maps!</string>
    <string name="email_us">Email us!</string>
    <string name="call_us">Call us!</string>
    <string name="devtitle">Additional Information</string>
    <string name="devinfo">Institute of the South Pacific Self Service application was designed, developed, and tested by Ava Dooley and Olivia Lye. ISP Self Service serves as a network to connect past, present, and future students together and provide helpful information on courses, program offerings, school location and transportation information, and contact information for the school administrators. All rights reserved.</string>
    <string-array name="years_array">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
    </string-array>
    <string name="courseinfo">For Lori Hogan, CP3490 Software Engineering Instructor</string>
    <string name="titleinfo">INSTITUTE OF THE SOUTH PACIFIC SELF SERVICE APPLICATION</string>
    <string name="selfserve">SELF SERVICE APPLICATION</string>
</resources>