<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        android:background="@drawable/roundedcornersprogramyear"
        android:contentDescription="@string/home"
        android:onClick="openHome"
        android:src="@drawable/backhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonCall"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/roundedcornersnews"
        android:contentDescription="@string/phone"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/callphone"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/buttonEmail"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/roundedcornerstransportation"
        android:contentDescription="@string/email"
        android:onClick="openEmail"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234"
        app:srcCompat="@drawable/email"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_us_on_google_maps"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <ImageButton
        android:id="@+id/buttonMaps"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:background="@drawable/roundedcornerscourses"
        android:contentDescription="@string/visit_us_on_google_maps"
        android:onClick="openGoogleMaps"
        android:scaleType="centerInside"
        android:src="@drawable/markermap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_us"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/textCallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_us"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <WebView
        android:id="@+id/webViewCNA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMaps"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>