<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textNameOfInstitute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/institute_of_the_south_pacific"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <ImageButton
        android:id="@+id/buttonCourses"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/roundedcornerscourses"
        android:onClick="openOfferedCourses"
        android:padding="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/offeredcourses_optimized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textOfferedCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/offered_courses"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCourses" />

    <ImageButton
        android:id="@+id/buttonSchedule"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/roundedcornersschedule"
        android:onClick="openSchedule"
        android:padding="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/schedule_optimized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/schedule"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSchedule" />

    <ImageButton
        android:id="@+id/buttonCalendar"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/roundedcornerscalendar"
        android:onClick="openCalendar"
        android:padding="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/calendar_optimized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calendar"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.830"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalendar" />

    <ImageButton
        android:id="@+id/buttonNews"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/roundedcornersnews"
        android:onClick="openNews"
        android:padding="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/newsfeed_optimized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textNewsFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/news_feed"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNews" />

    <ImageButton
        android:id="@+id/buttonTransportation"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/roundedcornerstransportation"
        android:padding="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/publictransit_optimized"
        android:onClick="openPublicTransit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textPublicTransit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/public_transit"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransportation" />

    <ImageButton
        android:id="@+id/buttonContact"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/roundedcornerscontact"
        android:padding="6dp"
        android:scaleType="centerInside"
        android:onClick="openContactUs"
        android:src="@drawable/contactus_optimized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContact" />

    <Button
        android:id="@+id/buttonSelectProgram"
        android:layout_width="203dp"
        android:layout_height="86dp"
        android:background="@drawable/roundedcornersprogramyear"
        android:onClick="openPrograms"
        android:text="@string/select_program"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />


</androidx.constraintlayout.widget.ConstraintLayout>